--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@heroui/theme": "^2.4.9",
     "@heroui/user": "^2.2.10",
     "@prisma/client": "^6.4.1",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^12.4.7",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
