--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@heroui/form": "^2.1.12",
     "@heroui/input": "^2.4.13",
     "@heroui/link": "^2.2.11",
+    "@heroui/listbox": "^2.3.14",
     "@heroui/modal": "^2.2.11",
     "@heroui/navbar": "^2.2.12",
+    "@heroui/select": "^2.4.15",
     "@heroui/switch": "^2.2.12",
     "@heroui/system": "^2.4.10",
     "@heroui/table": "^2.2.12",
