--- a/compose.yaml
+++ b/compose.yaml
@@ -8,6 +8,7 @@ services:
       - 3000:3000
     environment:
       NODE_ENV: development
+      # DATABASE_URL: "postgresql://postgres:1234567890@ai_website-db-1:5000/tradebotdb"
     develop:
       watch:
         - action: sync
@@ -24,10 +25,9 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 1234567890
       POSTGRES_DB: tradebotdb
-      POSTGRES_PORT: 5000  # ✅ Tell PostgreSQL to use port 5000
     ports:
-      - "5000:5000"  # ✅ Expose PostgreSQL on port 5000
-    command: ["postgres", "-p", "5000"]
+      - "5000:5432" 
+    command: ["postgres"] 
     # user: postgres
     # secrets:
     #   - db-password
