--- a/package.json
+++ b/package.json
@@ -32,13 +32,14 @@
     "@prisma/client": "^6.4.1",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.3",
     "framer-motion": "^12.4.7",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "recharts": "^2.15.1",
     "swiper": "^11.2.5"
   },
   "devDependencies": {
