--- a/compose.yaml
+++ b/compose.yaml
@@ -18,6 +18,15 @@ services:
             - node_modules/
         - action: rebuild
           path: package.json
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"   # number of files or file count
+        max-size: "10m" # file size
+    # networks:
+    #   - goon
+    # extra_hosts:
+    #   - "localhost:host-gateway"
 
   db:
     image: postgres:16.7-alpine
@@ -29,42 +38,22 @@ services:
       - "5200:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "3"   # number of files or file count
+        max-size: "10m" # file size
+    # networks:
+    #   - goon
+    # extra_hosts:
+    #   - "localhost:host-gateway"
 
 volumes:
   postgres-data:
-    # user: postgres
-    # secrets:
-    #   - db-password
 
-    # The commented out section below is an example of how to define a PostgreSQL
-    # database that your application can use. `depends_on` tells Docker Compose to
-    # start the database before your application. The `db-data` volume persists the
-    # database data between container restarts. The `db-password` secret is used
-    # to set the database password. You must create `db/password.txt` and add
-    # a password of your choosing to it before running `docker compose up`.
-    #     depends_on:
-    #       db:
-    #         condition: service_healthy
-    #   db:
-    #     image: postgres
-    #     restart: always
-    #     user: postgres
-    #     secrets:
-    #       - db-password
-    #     volumes:
-    #       - db-data:/var/lib/postgresql/data
-    #     environment:
-    #       - POSTGRES_DB=example
-    #       - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
-    #     expose:
-    #       - 5432
-    #     healthcheck:
-    #       test: [ "CMD", "pg_isready" ]
-    #       interval: 10s
-    #       timeout: 5s
-    #       retries: 5
-    # volumes:
-    #   db-data:
-    # secrets:
-    #   db-password:
-    #     file: db/password.txt
+# networks:
+#   goon:
+#     driver: bridge
+# extra_hosts:
+#   "localhost:host-gateway"
+   
