--- a/package.json
+++ b/package.json
@@ -24,22 +24,26 @@
     "@heroui/pagination": "^2.2.14",
     "@heroui/select": "^2.4.15",
     "@heroui/switch": "^2.2.12",
-    "@heroui/system": "^2.4.10",
+    "@heroui/system": "^2.4.12",
     "@heroui/table": "^2.2.12",
     "@heroui/tabs": "^2.2.11",
-    "@heroui/theme": "^2.4.9",
+    "@heroui/theme": "^2.4.12",
+    "@heroui/tooltip": "^2.2.13",
     "@heroui/user": "^2.2.10",
     "@prisma/client": "^6.4.1",
+    "@stripe/react-stripe-js": "^3.5.1",
+    "@stripe/stripe-js": "^6.1.0",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.3",
-    "framer-motion": "^12.4.7",
-    "next": "15.1.7",
+    "framer-motion": "^12.6.2",
+    "next": "^15.1.7",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "stripe": "^17.7.0",
     "swiper": "^11.2.5"
   },
   "devDependencies": {
