--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "@stripe/react-stripe-js": "^3.5.1",
     "@stripe/stripe-js": "^6.1.0",
     "@types/bcrypt": "^5.0.2",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
+    "cron": "^4.1.3",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.3",
     "framer-motion": "^12.6.2",
