--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
     "next-themes": "^0.4.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "stripe": "^17.7.0",
-    "swiper": "^11.2.5"
+    "stripe": "^17.7.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
