--- a/website/package.json
+++ b/website/package.json
@@ -59,6 +59,7 @@
     "@types/react-dom": "^19",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "@types/swagger-ui-react": "^5.18.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "patch-package": "^8.0.0",
