--- a/compose.yaml
+++ b/compose.yaml
@@ -5,7 +5,7 @@ services:
     ports:
       - 3000:3000
     environment:
-      NODE_ENV: development
+      # NODE_ENV: development
       # NODE_ENV: production
       DATABASE_URL: ${COMPOSE_DATABASE_URL}
     develop:
