--- a/compose.yaml
+++ b/compose.yaml
@@ -8,16 +8,16 @@ services:
       # NODE_ENV: development
       # NODE_ENV: production
       DATABASE_URL: ${COMPOSE_DATABASE_URL}
-    develop:
-      watch:
-        - action: sync
-          path: ./website
-          target: /app
-          ignore:
-            - node_modules/
-            - .next/
-        - action: rebuild
-          path: package.json
+    # develop:
+    #   watch:
+    #     - action: sync
+    #       path: ./website
+    #       target: /app
+    #       ignore:
+    #         - node_modules/
+    #         - .next/
+    #     - action: rebuild
+    #       path: package.json
     logging:
       driver: "json-file"
       options:
