--- a/compose.yaml
+++ b/compose.yaml
@@ -27,9 +27,9 @@ services:
   db:
     image: postgres:16.7-alpine
     environment:
-      POSTGRES_USER: forex
-      POSTGRES_PASSWORD: 1234567890
-      POSTGRES_DB: tradebotdb
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5432:5432"
     volumes:
